# anki

./: .gitignore  .mypy.ini  CONTRIBUTORS  README.md  justfile
androidapp/: .gitignore  README.md  build.gradle.kts  keystore.properties.example  settings.gradle.kts
androidapp/app/: build.gradle.kts
deploy/sync-server/: Dockerfile  README.md  fly.toml
docs/speedrun/: ai-note.md  architecture.md  files-touched.md  model-notes.md  rust-change.md
proto/anki/: speedrun.proto
pylib/tests/: test_speedrun.py
pystubs/numpy/: __init__.pyi
qt/: pyproject.toml
rsandroid/: Cargo.toml
rsandroid/src/: lib.rs
tools/: build_content_apkg.py  build_content_library.py  build_e2e_apkg.py  import_mmlu_pack.py  import_question_pack.py  import_question_pack.sh  push_deck.sh  speedrun_ablation.py  speedrun_ablation.sh  speedrun_ablation_report.md  speedrun_ai_cache.json  speedrun_ai_eval.py  speedrun_ai_eval.sh  speedrun_ai_eval_report.md  speedrun_benchmark.py  speedrun_benchmark.sh  speedrun_calibration.py  speedrun_calibration.sh  speedrun_calibration_report.md  speedrun_card_check.py  speedrun_card_check.sh  speedrun_cardcheck_cache.json  speedrun_cardcheck_generated.json  speedrun_cardcheck_gold.json  speedrun_cardcheck_report.md  speedrun_cars_pack.json  speedrun_check.sh  speedrun_coverage_map.py  speedrun_coverage_map.sh  speedrun_coverage_report.md  speedrun_crash.py  speedrun_crash.sh  speedrun_crash_report.md  speedrun_e2e.py  speedrun_e2e.sh  speedrun_e2e_full.py  speedrun_e2e_full.sh  speedrun_gold_set.json  speedrun_latency_bench.py  speedrun_latency_bench.sh  (+15 more)
(+121 files in other folders)
