# Minimal JNI bridge exposing the shared Anki/Speedrun Rust engine to Android.
#
# This crate is intentionally detached from the main workspace (note the empty
# [workspace] table below) so it never affects `cargo check --workspace` and is
# only built for Android targets via cargo-ndk. See README.md.
#
# TLS: for the offline Wednesday MVP we depend on `anki` with no TLS backend
# (default-features = false). The workspace pins reqwest to default-features =
# false, and every TLS code path in rslib is `#[cfg(feature = "rustls")]`-gated
# with a non-TLS fallback, so this compiles and runs for local (offline) review
# without pulling in OpenSSL (native-tls) or aws-lc-rs (rustls). Two-way sync
# (Friday) enables the `rustls` feature.

[package]
name = "rsandroid"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[lib]
name = "rsandroid"
crate-type = ["cdylib"]

[dependencies]
# No TLS backend for the offline MVP (see the TLS note at the top of this file).
anki = { path = "../rslib", default-features = false }
jni = "0.21"
# anki uses tokio's io-util extension traits; in the main workspace these are
# enabled via cross-crate feature unification. As a detached crate we must
# enable them explicitly so `anki` compiles for the Android target.
tokio = { version = "1.45", features = ["io-util", "fs", "rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }

[workspace]
